# captioning-webui

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: endpoints.py  schemas.py  services.py
static/: app.js  index.html  style.css
